# pytorch-learning

./: .gitignore  Pipfile  README.md  cifar10_loader.py  classifier_main.py  dataset.py  dataset_access.py  detection_main.py  fasterrcnn_detector.py  fasterrcnn_trainer.py  loader.py  main.py  oxfordpet_loader.py  pyproject.toml  register_bucket.py  resnet_classifier.py  resnet_trainer.py  trainer.py
1.9/: .gitignore  Pipfile  alexnet.py  cifar10_loader.py  classifier.py  main.py  package_test.py
lightning/: classifier.py  loader.py  main.py  resnet.py
lightning/classification/: .dockerignore  Dockerfile  cifar10_dataset.py  classifier.py  config.py  dataset.py  debug_image.py  lenet.py  loader.py  main.py  mnist_dataset.py  pyproject.toml  sample_data.py  subset.py  transform.py
lightning/classifier/: config.py  main.py
lightning/detection/: car_dataset.py  cml_dataset.py  config.py  debug_image.py  detector.py  effdet_model.py  loader.py  main.py  oxfordpet_dataset.py  plot.py  transform.py
v1.9/: cifar10_loader.py
vanilla/: model.py  oxfordpet_loader.py  resnet_classifier.py
vanilla/v1.9/: convert_onnx.py
