[tool.poetry]
name = "pytorch-learning"
version = "0.2.0"
description = ""
authors = ["wellflat <wellflat@gmail.com>"]
license = "https://github.com/pytorch/pytorch/blob/master/LICENSE"
packages = [
    {include="lightning", from="."}
]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
torchvision = "^0.13.1"
pytorch-lightning = "^1.7.0"
pandas = "^1.4.3"
albumentations = "^1.2.1"
rich = "^12.5.1"
boto3-type-annotations = "^0.3.1"
hydra-core = "^1.2.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
